[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-kernels"
version = "0.1.0"
description = "Custom Triton GPU kernels"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Omkar Nabar" }
]
keywords = ["triton", "gpu", "cuda", "attention", "gemm", "kernels", "inference"]

dependencies = [
    "torch>=2.3.0",
    "triton>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]
vllm = [
    "vllm>=0.4.0",
]

[project.urls]
Repository = "https://github.com/omkarnabar/triton-kernels"

[tool.setuptools.packages.find]
where = ["."]
include = ["kernels*"]